<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_recover"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_recover_message"
            android:layout_below="@id/titulo"
            android:layout_marginTop="20dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/mensaje"
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            app:errorEnabled="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_indicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/layout_email"
            android:layout_alignLeft="@id/layout_email"
            android:layout_alignRight="@id/layout_email"
            android:layout_alignStart="@id/layout_email"
            android:layout_below="@+id/layout_email"
            android:layout_marginTop="20dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_indicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_pass_indicio"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_recuperar"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/layout_email"
            android:layout_alignLeft="@id/layout_email"
            android:layout_alignRight="@id/layout_email"
            android:layout_alignStart="@id/layout_email"
            android:layout_below="@+id/layout_indicio"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/label_recover_button" />
    </RelativeLayout>
</ScrollView>