<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/contenedor_principal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miguel.mywatchlist.actividades.SearchActivity"
    android:clickable="true">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radio_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_buscar_movies"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_buscar_series"/>

    </RadioGroup>

    <ListView
        android:layout_below="@id/radio_group"
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/sin_resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/not_found"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_sin_resultados"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
