<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contenedor_padre"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9">

    <RelativeLayout
        android:id="@+id/contenedor_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="false"
                android:layout_centerVertical="false"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/email"
                android:layout_alignLeft="@+id/email"
                android:layout_alignRight="@+id/email"
                android:layout_alignStart="@+id/email"
                android:layout_below="@+id/email"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/password"
                android:layout_alignLeft="@+id/password"
                android:layout_alignRight="@+id/password"
                android:layout_alignStart="@+id/password"
                android:layout_below="@+id/password"
                android:layout_marginEnd="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/label_signin" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_signup"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/button_login"
                android:layout_alignLeft="@+id/button_login"
                android:layout_alignRight="@+id/button_login"
                android:layout_alignStart="@+id/button_login"
                android:layout_below="@+id/button_login"
                android:text="@string/label_signup"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contenedor_ayuda"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/label_help"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>
    </RelativeLayout>
</LinearLayout>