<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email"
                    app:backgroundTint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@id/layout_email"
                android:layout_alignRight="@id/layout_email"
                android:layout_alignEnd="@id/layout_email"
                android:layout_alignStart="@id/layout_email"
                android:textColorHint="@android:color/white"
                android:layout_below="@id/layout_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_password"
                    app:backgroundTint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignLeft="@id/layout_email"
                android:layout_alignRight="@id/layout_email"
                android:layout_alignEnd="@id/layout_email"
                android:layout_alignStart="@id/layout_email"
                android:textColorHint="@android:color/white"
                android:layout_below="@id/layout_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@android:color/white"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_confirm"
                    app:backgroundTint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_indicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/layout_email"
                android:layout_alignLeft="@id/layout_email"
                android:layout_alignRight="@id/layout_email"
                android:layout_alignStart="@id/layout_email"
                android:layout_below="@+id/layout_confirm"
                android:layout_marginTop="20dp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="@android:color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_indicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_pass_indicio"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    app:backgroundTint="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_registrarse"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/layout_email"
                android:layout_alignLeft="@id/layout_email"
                android:layout_alignRight="@id/layout_email"
                android:layout_alignStart="@id/layout_email"
                android:layout_below="@+id/layout_indicio"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:text="@string/label_signup" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>